ex header added

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <!-- Сюда будет всталена ссылка на файл скриптов -->
     <!-- inject:js -->
     <!-- endinject -->
-    
+    //= html/header_section.html
     <main>
       
     </main>
