--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,9 @@
     <!-- Сюда будет всталена ссылка на файл скриптов -->
     <!-- inject:js -->
     <!-- endinject -->
-    
+    //= html/header.html
     <main>
       
-      //= html/slider.html
 
     </main>
 
