--- a/src/html/video_section.html
+++ b/src/html/video_section.html
@@ -1,16 +1,16 @@
-<section class="video_section">
+<section class="video_section" id="#video">
     <div class="video_section_wrapper">
         <div class="video_section_text_wrapper">
             <h2 class="video_section_title">watch the video</h2>
             <p class="video_section_text">A problem arose during the beta, players often (especially at high ranks) teamed up in Collision mode. Everyone who twisted the character around their axis showed their willingness to "become a brother in battle." Players could not kill each other until they were suffocated in a toxic fog.</p>
             <div class="video_section_links_wrapper">
-                <a class="video_section_link" target="blank" href="https://apps.apple.com/ua/app/brawl-stars/id1229016807?l=ru"><img class="video_section_links_list_icon" src="../images/apple.png" alt="apple"></a>
-                <a class="video_section_link" target="blank" href="https://play.google.com/store/apps/details?id=com.supercell.brawlstars&hl=ru&gl=US"><img class="video_section_links_list_icon" src="../images/android.png" alt="android"></a>
+                <a class="video_section_link" target="blank" href="https://apps.apple.com/ua/app/brawl-stars/id1229016807?l=ru"><img class="video_section_links_list_icon" src="./images/apple.png" alt="apple"></a>
+                <a class="video_section_link" target="blank" href="https://play.google.com/store/apps/details?id=com.supercell.brawlstars&hl=ru&gl=US"><img class="video_section_links_list_icon" src="./images/android.png" alt="android"></a>
             </div>
         </div>
 
         <div class="video_section_video_wrapper">
-            <video class="brawl_video" src="../images/brawl_video.mp4" poster="../images/brawl_video_poster.png" controls preload=""></video>
+            <video class="brawl_video" src="./images/brawl_video.mp4" poster="./images/brawl_video_poster.png" controls preload=""></video>
 
         </div>
     </div>
