--- a/src/html/video_section.html
+++ b/src/html/video_section.html
@@ -1,5 +1,5 @@
-<section class="video_section" id="#video">
-    <div class="video_section_wrapper">
+<section class="video_section">
+    <div class="video_section_wrapper" id="#video">
         <div class="video_section_text_wrapper">
             <h2 class="video_section_title">watch the video</h2>
             <p class="video_section_text">A problem arose during the beta, players often (especially at high ranks) teamed up in Collision mode. Everyone who twisted the character around their axis showed their willingness to "become a brother in battle." Players could not kill each other until they were suffocated in a toxic fog.</p>
