--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
       //= html/section1.html
       //= html/video_section.html
       //= html/card_member.html
+      //= html/slider.html
     </main>
 
   </body>
