--- a/src/html/slider.html
+++ b/src/html/slider.html
@@ -1,4 +1,4 @@
-<section class="slider">
+<section class="slider" id="comments">
     <div class="SliderWrapper">
 
         <div class="SliderTitleWrapper">
