--- a/src/html/slider.html
+++ b/src/html/slider.html
@@ -26,7 +26,7 @@
                     <div class="image">
                         <article class="slider__card">
 
-                            <img class="slider__img" src="../images/SliderPhoto1.png">
+                            <img class="slider__img" src="./images/SliderPhoto1.png">
 
                             <h4 class="slider__title">Mivelden RYTP</h4>
 
@@ -51,7 +51,7 @@
                         <article class="slider__card">
 
 
-                            <img class="slider__img" src="../images/SliderPhoto2.png">
+                            <img class="slider__img" src="./images/SliderPhoto2.png">
 
                             <h4 class="slider__title">Mivelden RYTP</h4>
 
@@ -73,7 +73,7 @@
                         <article class="slider__card">
 
 
-                            <img class="slider__img" src="../images/SliderPhoto3.png">
+                            <img class="slider__img" src="./images/SliderPhoto3.png">
 
                             <h4 class="slider__title">Mivelden RYTP</h4>
 
@@ -93,7 +93,7 @@
 
                         <article class="slider__card">
 
-                            <img class="slider__img" src="../images/SliderPhoto4.png">
+                            <img class="slider__img" src="./images/SliderPhoto4.png">
 
                             <h4 class="slider__title">Mivelden RYTP</h4>
 
@@ -115,7 +115,7 @@
 
                         <article class="slider__card">
 
-                            <img class="slider__img" src="../images/SliderPhoto5.png">
+                            <img class="slider__img" src="./images/SliderPhoto5.png">
 
                             <h4 class="slider__title">Mivelden RYTP</h4>
 
