--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Brawl Stars</title>
-    <link rel="icon" href="../images/photo_2020-12-24_18-30-12.jpg" />
+    <link rel="icon" href="./images/photo_2020-12-24_18-30-12.jpg" />
     <!-- Сюда будет всталена ссылка на файл стилей -->
     <!-- inject:css -->
     <!-- endinject -->
